--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -3,9 +3,13 @@
   /* width: 100%; 
    height: 100%; */
   /* background-color: chocolate; */
+  background-color: #ddcbcbaf;
 }
 #services>h1{
   text-align: center;
+  padding: 2vw 1vw;
+  font-size: 3vw;
+  /* background-color: #d53c3c; */
 }
 .cantainer{
   /* width: 100vw; */
@@ -36,26 +40,53 @@
   align-items: center;
   flex-direction: column;
   width: 50vw;
-  height: 50vh;
+  height: 49vh;
+  padding: 1.3vw;
+
+
+
 }
 
 .facilities-p>ul>li{
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
- font-size: 2vw;
+ /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  */
+ /* font-style: italic;
+  */
+ font-size: 1.5vw;
+ font-weight: 200;
+ margin-bottom: 0.8vh;
+ color: rgb(41, 45, 45);
+ font-family: "Open Sans",sans-serif;
+
+
 }
 .btn{
   display: inline-block;
   padding: 1vh 2vw;
-  background-color: #333333;
+  background-color: #d53c3c;
   color: #ffffff;
   text-decoration: none;
-  margin-top: .5vw;
+  margin-top: 1vw;
+  /* border-radius: 20px; */
+  border-top-right-radius: 10px;
+  
+  border-bottom-left-radius: 10px;
 }
+.btn:hover{
+  background-color: rgb(37, 105, 59);
+}
+
 @media only screen and (max-width: 600px){
   
   .service{
       display: flex;
       flex-direction: column;
+  }
+  #services>h1{
+    text-align: center;
+    padding: 4vw 2vw;
+    font-size: 6vw;
+    font-weight: 600;
+    background-color: #6f656544;
   }
   .service .facilities{
     background-size: cover;
@@ -92,7 +123,7 @@
   .btn{
     display: inline-block;
     padding: 1vh 2vw;
-    background-color: #333333;
+    background-color: #d53c3c;
     color: #ffffff;
     text-decoration: none;
     margin-top: 3vw;
