--- a/public/stylesheets/shop_provider_home.css
+++ b/public/stylesheets/shop_provider_home.css
@@ -12,7 +12,7 @@ html, body{
 }
 .shop-provider-home{
     width: 100%;
-    background-color: red;
+    background-color: rgb(244, 233, 233);
 }
 .shop-provider-home>h1{
     text-align: center;
@@ -20,67 +20,42 @@ html, body{
 }
 .container {
 display: flex;
-flex-wrap: wrap;
 justify-content: center;
-align-items: flex-start;
-/* padding: 2rem; */
+align-items: center;
+background-color: lightgreen;
+width: 100%;
+/* height: 100%; */
 }
 
-.left, .right {
+.left{
+/* display: flex; */
+/* flex-direction: column; */
+/* justify-content: center; */
+
+align-items: center;
+width: 50%;
 flex: 1;
 padding: 1rem;
-background-color: #fff;
+background-color: #ac5d5d;
 box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
-
-.left {
-text-align: left;
+.container .right{
+  width: 50%;
+  background-color: lightskyblue;
 }
 
-.center {
-flex: 2;
-text-align: center;
-margin-bottom: 1rem;
+.left>h2{
+  font-size: 3vw;
+  text-align: center;
+}
+.left>ol{
+  background-color: lightpink;
+}
+.left>ol>a{
+  text-decoration: none;
 }
 
-.right {
-text-align: left;
-}
 
-ul {
-list-style-type: none;
-padding: 0;
-}
-
-ul li {
-margin-bottom: 1rem;
-}
-
-form {
-display: flex;
-flex-direction: column;
-}
-a{
-text-decoration: none;
-}
-
-label, input, button {
-margin-bottom: 1rem;
-}
-
-button {
-background-color: #ff8c00;
-color: white;
-border: none;
-padding: 0.5rem 1rem;
-border-radius: 4px;
-cursor: pointer;
-transition: background-color 0.3s ease-in-out;
-}
-
-button:hover {
-background-color: #e67800;
-}
 
 /* Media Queries for Responsiveness */
 
