--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -6,7 +6,8 @@
 }
 
 body{
-  height: 100vh;
+width: 100%;
+height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,8 +16,11 @@ body{
 }
 
 .about-section{
-  background: url(https://erail.in/blog/Images/Post/railway-coach-class_10.jpg) no-repeat left;
+  /* background: url(https://erail.in/blog/Images/Post/railway-coach-class_10.jpg) no-repeat left; */
+  background: url('/images/WhatsApp Image 2023-07-17 at 14.41.10.jpg') no-repeat left;
   background-size: 50%;
+  
+
   background-color: #fdfdfd;
   overflow: hidden;
 
