--- a/public/stylesheets/function.css
+++ b/public/stylesheets/function.css
@@ -12,8 +12,10 @@ body {
   width: 100%;
   z-index: 1;
   max-height: 200px;
-  color: #fff;
-  background-color: rgb(28, 35, 49);
+  /* color: #fff; */
+  color: black;
+  /* background-color: rgb(28, 35, 49); */
+  background-color: #825e5ebc;
   /* border-radius: 10px; */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
@@ -28,9 +30,10 @@ body {
 
 .functions label {
    flex: 1 1 10%;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   display: flex;
   padding: 0 1vw;
+  margin-top: 0.7vw;
   font-weight: 400;
   font-size: 1.2vw;
 }
@@ -47,7 +50,7 @@ body {
 
 .functions button {
   flex: 0 0 auto; 
-  background-color: #007BFF;
+  /* background-color: #007BFF; */
   background-color: #d90403;
   color: #fff;
   padding: 10px 20px;
@@ -57,7 +60,8 @@ body {
 }
 
 .functions button:hover {
-  background-color:  #c55f5f;
+  background-color:  #15af4d;
+  scale: 1.1;
 }
 
 
