--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -52,11 +52,15 @@
  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  */
  /* font-style: italic;
   */
- font-size: 1.44vw;
- font-weight: 200;
+ font-size: 1.5vw;
+ font-weight: 300;
  /* margin-bottom: 0.2vh; */
- color: rgb(41, 45, 45);
- font-family: "Open Sans",sans-serif;
+ color: #050404e0;
+ /* font-family: sans-serif; */
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+letter-spacing: 1px;
+
+
 
 
 }
