--- a/public/stylesheets/shetbook.css
+++ b/public/stylesheets/shetbook.css
@@ -26,6 +26,7 @@ input[type="checkbox"] + label {
     text-align: center;
     table-layout: fixed;
     width: 80%;
+    opacity: 0;
 }
 
 #seatsBlock td {
