--- a/views/after_loungeBook_loggedInIndex.ejs
+++ b/views/after_loungeBook_loggedInIndex.ejs
@@ -38,7 +38,7 @@
    <% include ./function.ejs %>
     
   <div class="shop_menu_section">
-       <h1>khilesdf n</h1>
+       <h1>Anmol</h1>
        <h1> Station Location : <%= lounge.stationLocation %></h1>
        <h1> lounge Name : <%= lounge.loungeName %></h1>
 
@@ -56,7 +56,7 @@
               <h2>  <%= all_items[i][j].item_Name %>  </h2>
               <p> <%= all_items[i][j].description %> </p>
               <p class="price"> <%= all_items[i][j].price %> </p>
-              <button class="add-to-cart">Buy Now</button>
+              <button class="add-to-cart">Order now</button>
               
           </div>
 
