--- a/views/chooseLaunge.ejs
+++ b/views/chooseLaunge.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,10 @@
         
         
 </body>
-</html> -->
+</html>
+
+
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,9 +38,7 @@
         <h1>Registered Lounges in Station</h1>
         <ul class="lounge-list">
             <li class="lounge-item">
-                <!-- <div class="lounge-image">
-                    <img src="https://mediaim.expedia.com/localexpert/249776/7ff1aa9f-abaf-42d9-8b29-8cbdb9b02b50.jpg?impolicy=resizecrop&rw=1005&rh=565" alt="Lounge 1">
-                </div> -->
+               
                 <div class="lounge-details">
                     <h2>Lounge Name 1</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -45,18 +46,16 @@
                 </div>
             </li>
             <li class="lounge-item">
-                <!-- <div class="lounge-image">
-                    <img src="https://english.cdn.zeenews.com/sites/default/files/2021/09/21/972417-new-delhi-railway-station-executive-lounge.jpg" alt="Lounge 2">
-                </div> -->
+              
                 <div class="lounge-details">
                     <h2>Lounge Name 2</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <a href="#">Book now</a>
                 </div>
             </li>
-            <!-- Add more lounge items here -->
+            Add more lounge items here
         </ul>
     </div>
     
 </body>
-</html>
+</html> -->
