--- a/public/stylesheets/shetbook.css
+++ b/public/stylesheets/shetbook.css
@@ -6,8 +6,13 @@ body {
     padding: 0;
 }
 
+
+.upperform{
+    margin-top: 30px;
+    margin-left: 390px;
+}
 .inputForm {
-    margin-top: 20px;
+    margin-top: 50px;
 }
 input[type="checkbox"] + label {
     position: relative;
@@ -16,7 +21,7 @@ input[type="checkbox"] + label {
   }
 
 .seatStructure {
-    margin-top: 20px;
+    margin-top: 80px;
 }
 .seatStructure input{
     background-color: #333;
@@ -59,6 +64,7 @@ input[type="checkbox"] + label {
 }
 
 button {
+    margin-top: 20px;
     padding: 10px 20px;
     background-color: #4CAF50;
     color: #fff;
