--- a/public/stylesheets/shop_menu.css
+++ b/public/stylesheets/shop_menu.css
@@ -6,14 +6,30 @@ body {
 }
 .shop_menu_section{
     width: 100%;
-    background-color: lightgreen;
+    background-color: rgb(226, 226, 229);
 
+}
+
+.shop_menu_section> h1 {
+    font-size: 28px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.shop_menu_section>h1:first-child {
+    font-size: 36px;
+    color: #007bff;
+}
+
+.shop_menu_section>h1:last-child {
+    font-size: 24px;
+    color: #555;
 }
 
 
 .shop_menu{
     display: flex;
-    justify-content: space-around;
+    gap: 60px;
     flex-wrap: wrap;
     padding: 2rem;
     width: 100%;
