--- a/views/chooseLaunge.ejs
+++ b/views/chooseLaunge.ejs
@@ -20,19 +20,11 @@
         
         
 </body>
-<<<<<<< HEAD
 </html>
 
 
-<!-- 
-=======
-</html> -->
 
-<!--  -->
-
-
->>>>>>> 719c30f6d02b8bb13ec45aea860155736eddd9ac
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,4 +58,4 @@
     </div>
     
 </body>
-</html> -->
+</html>  -->
