updated by khilesh

--- a/views/foodSelection.ejs
+++ b/views/foodSelection.ejs
@@ -6,29 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>heooo
+   
+ <form action="/foodOrder" method="post">
+   <h1> <%= item.item_Name %> </h1>
+   <img width="200" height="100" src="/upload/<%= item.Image%>" alt="">
+   <h1>shop name : <%= shop_name.shopName %></h1>
 
-    </h1>
+   <label for="quantity">Quantity (between 1 and 5):</label>
+   <input type="number" id="quantity" name="quantity" min="1" max="10">
 
-
-         
-    <% for(var i=0;i< all_items.length; i++){ %>
-      
-        <% for(var j=0;j< all_items[i].length; j++){ %>
-  
-          <div class="menu-items">
-            
-    
-                <img src="https://1.bp.blogspot.com/-KzKj1aBe7-k/XeeVsF5b-2I/AAAAAAAAEII/XOksle75D5IKvng5l7OMWaX9K_0hCQX7wCLcBGAsYHQ/s1600/shahi%2Bpaneerr.jpg" alt="Paneer">
-                <h2>  <%= all_items[i][j].item_Name %>  </h2>
-                <p> <%= all_items[i][j].description %> </p>
-                <p class="price"> <%= all_items[i][j].price %> </p>
-                <button class="add-to-cart">Buy Now</button>
-                
-            </div>
-  
-         <% } %>
-                
-    <% } %>
+   <br>
+   <button type="submit">submit</button>
+</form>
 </body>
 </html>
