--- a/public/stylesheets/shop_menu.css
+++ b/public/stylesheets/shop_menu.css
@@ -6,7 +6,7 @@ body {
 }
 .shop_menu_section{
     width: 100%;
-    background-color: rgb(226, 226, 229);
+    background-color: rgb(223, 219, 219);
 
 }
 
@@ -33,6 +33,7 @@ body {
     flex-wrap: wrap;
     padding: 2rem;
     width: 100%;
+    background-color: lightgreen;
     /* height: 100vh; */
 }
 
@@ -42,7 +43,7 @@ body {
     border-radius: 8px;
     /* padding: 1rem; */
     /* margin: 1rem; */
-    overflow: hidden    ;
+    overflow: hidden;
     text-align: center;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     width: 15vw;
