--- a/views/shetbook.ejs
+++ b/views/shetbook.ejs
@@ -34,7 +34,7 @@
 
                   <label for="myCheckbox" id="A<%= i+1 %>"> <%=i+1%></label>
 
-                  <input type="checkbox" style="background-color: aliceblue;" class="seats" id="A<%= i+1 %>"  name="seat" value="A<%= i+1 %>">
+                  <input type="checkbox" style="background-color: aliceblue;" class="seats" id="f<%= i+1 %>"  name="seat" value="A<%= i+1 %>">
 
 
 
@@ -51,11 +51,22 @@
                     console.log(arrrrrr.indexOf(individual))
                     
                       var kuch = document.querySelector('#A<%= i+1 %>')
-                      var luck = document.querySelector('#A<%= i+1 %>')
+                      var luck = document.querySelector('#f<%= i+1 %>')
+
+                      console.log("lcukky"+luck)
+
                     if (array.indexOf(individual) == -1){
                     
                     }else{
                     kuch.style.backgroundColor = 'red';
+                    // var checkbox = document.getElementById("myCheckbox");
+  
+  
+                    luck.style.borderColor = "darkred";
+                    luck.style.backgroundColor = "red";
+  
+                    luck.disabled = true;
+  
                     // kuch.style.opacity = '0';  
                     }
                       arr='';
