--- a/views/userAccountPage.ejs
+++ b/views/userAccountPage.ejs
@@ -15,6 +15,11 @@
              </div>
 
              <h1><%=user.name%></h1>
+            <%  for(var i =0;i< orders.length;i++){  %>
+               <%  for(var j = 0;j < orders[i].seats.length;j++){ %>
+                     <h1><%= orders[i].seats[j] %></h1>
+               <%  }  %>
+            <%  }   %>
        
         </div> 
     <!-- <div id="midbox">
