--- a/views/after_loungeBook_loggedInIndex.ejs
+++ b/views/after_loungeBook_loggedInIndex.ejs
@@ -39,7 +39,6 @@
     
   <div class="shop_menu_section">
     
-    <form action="/foodSelection">
        <h1> Station Location : <%= lounge.stationLocation %></h1>
        <h1> lounge Name : <%= lounge.loungeName %></h1>
 
@@ -57,6 +56,7 @@
               <h2>  <%= all_items[i][j].item_Name %>  </h2>
               <p> <%= all_items[i][j].description %> </p>
               <p class="price"> <%= all_items[i][j].price %> </p>
+             <%= console.log("yyyyyyy"+all_items[i][j]._id) %>
              <a href="/item/<%= all_items[i][j]._id %>"> <button class="add-to-cart">Order now</button></a>
               
           </div>
