--- a/views/foodSelection.ejs
+++ b/views/foodSelection.ejs
@@ -6,17 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-   
- <form action="/foodOrder" method="post">
-   <h1> <%= item.item_Name %> </h1>
-   <img width="200" height="100" src="/upload/<%= item.Image%>" alt="">
-   <h1>shop name : <%= shop_name.shopName %></h1>
+   <form action="/foodOrder" method="post">
+    <input type="text" name="itemname" value="<%=item.item_Name %>">
 
-   <label for="quantity">Quantity (between 1 and 5):</label>
-   <input type="number" id="quantity" name="quantity" min="1" max="10">
+    <input type="text" name="itemid" value="<%=item._id %>">
+    <!-- <h1> <%= item.item_Name %> </h1> -->
 
-   <br>
-   <button type="submit">submit</button>
+    <img width="200" height="100" src="/upload/<%= item.Image%>" alt="">
+    <h1>shop name : <%= shop_name.shopName %></h1>
+ 
+    <label for="quantity">Quantity (between 1 and 5):</label>
+    <input type="number" id="quantity" name="quantity" min="1" max="10">
+ 
+    <br>
+    <button type="submit">submit</button>
 </form>
 </body>
 </html>
