--- a/views/loggedInindex.ejs
+++ b/views/loggedInindex.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./stylesheets/style.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/nav.css">
+  <link rel="stylesheet" href="/stylesheets/function.css">
 
 </head>
 <body>
