--- a/public/stylesheets/shop_menu.css
+++ b/public/stylesheets/shop_menu.css
@@ -33,7 +33,7 @@ body {
     flex-wrap: wrap;
     padding: 2rem;
     width: 100%;
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
     /* height: 100vh; */
 }
 
