--- a/views/shop_provider_home.ejs
+++ b/views/shop_provider_home.ejs
@@ -224,7 +224,7 @@
   
               <% for(var i=0;i< shops.length; i++){ %>
               <ol>
-                  <a href="/shopadminforaddingitems/<%= shops[i]._id %>"> <h1>Shop Name :  <%= shops[i].shopName %></h1> </a>
+                  <a href="/shopadminforaddingitems/<%= shops[i]._id %>"> <h1> :- Shop Name :  <%= shops[i].shopName %></h1> </a>
                   
                   <h3>station location: <%= shops[i].station_Name %></h3>
                   <div>
