--- a/views/provider.ejs
+++ b/views/provider.ejs
@@ -32,12 +32,12 @@
 
         <div class="user_boxes">
             <div class="user_box lounge">
-                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, numquam aliquid libero est ipsa explicabo reprehenderit iure? Doloribus quo iure veritatis ut deserunt harum illo facilis deleniti dolore laboriosam laborum ea consectetur rerum eveniet corrupti placeat neque voluptatem, molestias officia. Dolorum, a! Cupiditate nostrum possimus voluptatum placeat ipsa ducimus eaque omnis suscipit dolore sequi cumque totam porro aspernatur corporis consectetur hic dolores ut, nisi accusamus dignissimos nihil fugiat reiciendis.  </p>
                <button> <a class="box_link" href="/loungeProvider_login">Lounge Provider</a></button>
             </div>
 
             <div class="user_box shop">
-                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolor odit at laudantium?</p>
+                <p class="box_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, numquam aliquid libero est ipsa explicabo reprehenderit iure? Doloribus quo iure veritatis ut deserunt harum illo facilis deleniti dolore laboriosam laborum ea consectetur rerum eveniet corrupti placeat neque voluptatem, molestias officia. Dolorum, a! Cupiditate nostrum possimus voluptatum placeat ipsa ducimus eaque omnis suscipit dolore sequi cumque totam porro aspernatur corporis consectetur hic dolores ut, nisi accusamus dignissimos nihil fugiat reiciendis. </p>
                 <button>
                 <a class="box_link" href="/shopProvider_login">Shop Provider</a>
 
