--- a/public/stylesheets/provider.css
+++ b/public/stylesheets/provider.css
@@ -11,20 +11,26 @@ body {
 
 
 #main {
+  height: 80vh;
   background-color: #fff;
+  
   padding: 40px;
+ 
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  /* text-align: center;
   max-width: 700px;
   margin-top: 120px;
-  margin-left: 27%;
+  margin-left: 27%; */
 }
 
 .title {
   font-size: 2rem;
   color: #3498db;
   margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .user_boxes {
@@ -33,6 +39,8 @@ body {
 }
 
 .user_box {
+
+  height: 60vh;
   flex: 1;
   margin: 0 10px;
   padding: 20px;
@@ -52,8 +60,11 @@ body {
 }
 
 .box_text {
-  font-size: 1rem;
+  margin: 3%;
+  font-size: 1.2rem;
   line-height: 1.5;
+  text-align: center;
+  justify-content: center;
 }
 
 button>a{
@@ -61,6 +72,8 @@ text-decoration: none;
 color: black;
 }
 button{
+  margin-top: 8%;
+  margin-left: 35%;
   display: inline-block;
   padding: 10px 20px;
   text-decoration: none;
