--- a/views/shop_admin_for_adding_items.ejs
+++ b/views/shop_admin_for_adding_items.ejs
@@ -186,9 +186,9 @@
 
 <% for(var i = 0; i < items.length; i++) { %>
     <div class="item-container">
-        <h2 class="item-name"><%= items[i].item_Name %></h2>
+        <h2 class="item-name">Name : <%= items[i].item_Name %></h2>
         <p class="item-price">Price: <%= items[i].price %></p>
-        <p class="item-description"><%= items[i].description %></p>
+        <p class="item-description">Description : <%= items[i].description %></p>
         <img class="item-image" src="/upload/<%= items[i].Image %>" alt="Item Image">
         
         <div class="item-actions">
