--- a/views/userAccountPage.ejs
+++ b/views/userAccountPage.ejs
@@ -42,7 +42,7 @@
                      <h1><%=user.name%></h1>
                     <%  for(var i =0;i< orders.length;i++){  %>
                        <%  for(var j = 0;j < orders[i].seats.length;j++){ %>
-                             <h1><%= orders[i].seats[j] %></h1>
+                             <h1>Seats Booked : <%= orders[i].seats[j] %></h1>
                        <%  }  %>
                     <%  }   %>
                
