--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -12,15 +12,16 @@ width: 100%;
   align-items: center;
   justify-content: center;
   background-color: #f1f1f1;
+  /* display: none; */
 
 
 }
 
-.about-section{
+.about-section1{
   /* background: url(https://erail.in/blog/Images/Post/railway-coach-class_10.jpg) no-repeat left; */
   background: url('/images/WhatsApp Image 2023-07-17 at 14.41.10.jpg') no-repeat left;
   background-size: 50%;
-  
+  display: none;
 height: 100vh;
   background-color: #fdfdfd;
   /* background-color:#ddcbcbaf; */
@@ -31,13 +32,13 @@ height: 100vh;
   
 }
 
-#about> h1{
+#about1> h1{
   margin-left: 1000px;
   font-size: 50px;
   
     }
 
-.inner-container{
+.inner-container1{
   width: 50%;
   float: right;
   
@@ -51,14 +52,14 @@ height: 100vh;
   
 }
 
-.inner-container h1{
+.inner-container1 h1{
   margin-top: -7vh;
  
   font-size: 30px;
   font-weight: 900;
 }
 
-.text{
+.text1{
   font-size: 21px;
   color: #545454;
   line-height: 30px;
@@ -67,41 +68,59 @@ height: 100vh;
   font-weight: 500;
 }
 
-.skills{
+.skills1{
   display: flex;
   justify-content: space-between;
   font-weight: 700;
   font-size: 11px;
 }
-
+/* .about-section{
+  display: none;
+} */
 @media screen and (max-width:1200px){
-  .inner-container{
+
+  
+  .inner-container1{
       padding: 80px;
+      
+  }
+  .about-section1{
+    display: flex;
+  }
+  .text1{
+    color: #545454;
+
   }
 }
 
 @media screen and (max-width:1000px){
-  .about-section{
+  .about-section1{
       background-size: 100%;
       padding: 100px 40px;
       height: auto;
   }
-  .inner-container{
+  .about-section1{
+    display: flex;
+  }
+  .inner-container1{
       width: 100%;
       margin-bottom: 30px;
       margin-top: 0;
+      display: flex;
   }
 }
 
 @media screen and (max-width:600px){
-  .about-section{
+  .about-section1{
       padding: 0;
+      display: flex;
   }
 
   
-  .inner-container{
+  .inner-container1{
       padding: 60px;
       margin-bottom: 30px;
       margin-top: 0;
+      display: flex;
   }
 }
