--- a/views/for_perticuler_launge_admin.ejs
+++ b/views/for_perticuler_launge_admin.ejs
@@ -83,17 +83,21 @@
 
 
 
-     <center>  <h1> Here is all your orders </h1> </center>
+     <center>
 
+        
+        
+        <h1 style="font-family: Arial, Helvetica, sans-serif;"> Here is all your orders </h1> </center>
+        <div id="da">
        <% for(var j = 0; j < orders.length; j++){ %>
         
                  <% let obj = users1.find(o => o._id == orders[j].userId);  %>
         
       
                  <div style="border: 2px solid rgb(70, 64, 64); display: flex; flex-direction: column; margin-bottom:2%;">
-                     <h1> order Id :  <%= orders[j]._id %> </h1>
-                     <h1> user Name :  <%= obj.name %> </h1>
-                      <h1> seats booked :
+                     <h1 style="font-family: Arial, Helvetica, sans-serif;"> Order Id :  <%= orders[j]._id %> </h1>
+                     <h1 style="font-family: Arial, Helvetica, sans-serif;"> User Name :  <%= obj.name %> </h1>
+                      <h1 style="font-family: Arial, Helvetica, sans-serif;"> Seats booked :
                         
                         
                         <% for(var k = 0 ; k< orders[j].seats.length; k++){ %>
@@ -103,7 +107,7 @@
                          <%}%>  </h1>
       
       
-                         <h1> user Email :  <%= obj.email %> </h1>
+                         <h1 style="font-family: Arial, Helvetica, sans-serif;"> User Email :  <%= obj.email %> </h1>
 
 
                   <%  let futureDateUTC = orders[j].expireTime; %>
@@ -128,7 +132,7 @@
          
 
        <!-- <h1>Countdown Timer</h1> -->
-       <h1>Time left: <span style="color: red;" class="timer<%= j %>"></span> </h1> 
+       <h1 style="font-family: Arial, Helvetica, sans-serif;">Time left: <span style="color: red;" class="timer<%= j %>"></span> </h1> 
    
        <% futureDateUtc = ''; currentDateUTC = ''; %>
 
@@ -157,6 +161,166 @@
        
 
         <% } %>
+    </div>
+
+
+    <style>
+        #da{
+            height: 56vh;
+            width: 98vw;
+            background-color: rgb(144, 253, 216);
+
+
+        }
+
+        
+        </style>
+      
+        
+        
+        
+    
 
 </body>
 </html>
+
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        /* Add global styles here */
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .seat {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid black;
+            border-radius: 2rem;
+            padding: 2%;
+            margin: 0.1%;
+        }
+
+        .booked-seat {
+            background-color: green;
+        }
+
+        .not-booked-seat {
+            background-color: rgb(128, 36, 0);
+        }
+
+        .order-container {
+            border: 2px solid rgb(70, 64, 64);
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2%;
+        }
+    </style>
+</head>
+<body>
+    <div class="center">
+        <h1 style="font-size: 4rem;"> : <%= perticuler_launge.loungeName %> : </h1>
+        <h1>Here are all your booked seats:</h1>
+    </div>
+
+    <div class="flex-container">
+        <% for(var i = 0; i < orders.length; i++){ %>
+            <% for(var j = 0; j < orders[i].seats.length; j++){ %>
+                <div class="seat booked-seat">
+                    <h1><%= orders[i].seats[j] %></h1>
+                </div>
+                <% } %>
+        <% } %>
+    </div>
+
+    <div class="center">
+        <h1>No Of Seats Left: <%= left_seats.length %></h1>
+        <h1>Here are all your 'NOT BOOKED' seats:</h1>
+    </div>
+
+    <div class="flex-container">
+        <% for(var i = 0; i < left_seats.length; i++){ %>
+            <div class="seat not-booked-seat">
+                <h1>A<%= left_seats[i] %></h1>
+            </div>
+        <% } %>
+    </div>
+
+    <div class="center">
+        <h1>Here are all your orders</h1>
+    </div>
+
+    <div id="da" class="flex-container">
+        <% for(var j = 0; j < orders.length; j++){ %>
+            <% let obj = users1.find(o => o._id == orders[j].userId); %>
+            <div class="order-container">
+                <h1>Order Id: <%= orders[j]._id %></h1>
+                <h1>User Name: <%= obj.name %></h1>
+                <h1>Seats booked: <%= orders[j].seats.join(', ') %></h1>
+                <h1>User Email: <%= obj.email %></h1>
+
+                <h1>Time left: <span class="timer<%= j %>"></span></h1>
+                <script>
+                    function updateTimer<%= j %>() {
+                        let futureDate = new Date('<%= orders[j].expireTime %>');
+                        let now = new Date();
+                        let timeDifferenceMs = futureDate - now;
+
+                        let hours = Math.floor(timeDifferenceMs / (1000 * 60 * 60));
+                        let minutes = Math.floor((timeDifferenceMs % (1000 * 60 * 60)) / (1000 * 60));
+                        let seconds = Math.floor((timeDifferenceMs % (1000 * 60)) / 1000);
+
+                        let timerElement = document.querySelector('.timer<%= j %>');
+                        timerElement.textContent = `${hours}h ${minutes}m ${seconds}s`;
+                    }
+
+                    setInterval(updateTimer<%= j %>, 1000);
+                    updateTimer<%= j %>();
+                </script>
+            </div>
+        <% } %>
+    </div>
+
+    <style>
+        /* Additional styles for responsiveness */
+        #da {
+            width: 100%;
+        }
+
+        .order-container {
+            padding: 2%;
+        }
+
+        @media screen and (max-width: 768px) {
+            .seat {
+                padding: 1%;
+            }
+
+            .order-container {
+                padding: 1%;
+            }
+        }
+    </style>
+</body>
+</html>
+
+
+ -->
