--- a/views/footer/footer.ejs
+++ b/views/footer/footer.ejs
@@ -22,8 +22,8 @@
           
             </ul>
             <ul class="footer-links">
-              <li><a href="#">Book Table</a></li>
-              <li><a href="#">Food Order</a></li>
+              <li><a href="/">Book Table</a></li>
+              <li><a href="/">Food Order</a></li>
               <li><a href="#">Hotels Near Me</a></li>
               <li><a href="#">All city Hotels</a></li>
              
