--- a/public/stylesheets/shetbook.css
+++ b/public/stylesheets/shetbook.css
@@ -6,10 +6,25 @@ body {
     padding: 0;
 }
 
+#main{
+    width: 100%;
+    background-color: lightcoral;
+}
 
 .upperform{
-    margin-top: 30px;
-    margin-left: 390px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8vw;
+    width: 100%;
+    height: 15vh;
+    background-color: lightblue;
+}
+.seat-number{
+}
+.seat-number input[type="number"]{
+    width: 125px;
+    height: 4vh;
 }
 .inputForm {
     margin-top: 50px;
@@ -21,7 +36,7 @@ input[type="checkbox"] + label {
   }
 
 .seatStructure {
-    margin-top: 80px;
+    background-color: lightseagreen;
 }
 .seatStructure input{
     background-color: #333;
