--- a/views/chooseLaunge.ejs
+++ b/views/chooseLaunge.ejs
@@ -1,34 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>choose launge </title>
-    <link rel="stylesheet" href="/stylesheets/chooseLounge.css">
-</head>
-<body>
-
-    <div id="main">
-        <h1>Registerd Lounge in station</h1>
-     <% for(var i = 0; i < launges.length; i++){ %>
-        <li>
-            <a href="/chooseLaunge/<%= launges[i]._id %>"><%= launges[i].loungeName %></a>
-        </li>
-    <% } %>
-
-    </div>
-        
-        
-</body>
-</html>
-
-</html> -->
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,13 +14,14 @@
      <% for(var i = 0; i < launges.length; i++){ %>
 
             <li class="lounge-item">
-               
+                <div class="lounge-image">
+                    <img src="https://img.freepik.com/free-vector/man-woman-drinking-tea-cafe-glass-armchair-cup-flat-vector-illustration-leisure-urban-lifestyle-concept_74855-10101.jpg?w=996&t=st=1694759820~exp=1694760420~hmac=b60a3b2fe932f14bb89f33c5aa41149f71387b701812d61da989427849917102" alt="Lounge Image">
+                </div>
                 <div class="lounge-details">
                    <a href="/chooseLaunge/<%= launges[i]._id %>"><%= launges[i].loungeName %></a>
 
                     <h2>Lounge Name 1</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#">Book Now</a>
                 </div>
             </li>
     <% } %>
@@ -62,4 +32,4 @@
     </div>
     
 </body>
-</html> 
+</html>
