--- a/views/loungeProvider_login.ejs
+++ b/views/loungeProvider_login.ejs
@@ -16,6 +16,7 @@
 </head>
 <body>
   <% include ./footer/nav.ejs %>
+  
     <div class="main-container container p-1">
      
         <div class="image-container">
@@ -32,10 +33,16 @@
                     <label for="password"  class="p-1">Password</label>
                     <input type="password" id="password" class="p-1" name="password" placeholder="password" required>
                 </div>
+
+                <div id="error-message" class="error-message">
+                    <h3 style="color: red;"> <%= error %> </h3> <!-- Display the error message here -->
+                 </div>
+                 
                 <button type="submit">Login</button>
                 <button class="google-btn">Login with Google</button>
                 <p class="toggle-form-login">If you don't have an account? Click here to register</p>
             </form>
+            <a href="/forgot-lounge-provider">forgot</a> <br> <br>
             <a href="/loungeProvider_register">Register</a>
         </div>
     </div>
