--- a/views/register.ejs
+++ b/views/register.ejs
@@ -129,15 +129,15 @@ body, h2, h3, p, label {
       <form id="registration-form"  action="/register" method="post">
         <div class="form-group d-flex flex-column">
           <label for="name">Name</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" id="name" name="name" placeholder="name" required>
         </div>
         <div class="form-group d-flex flex-column">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" placeholder="email" required>
         </div>
         <div class="form-group d-flex flex-column">
           <label for="password">Password</label>  
-          <input type="password" id="password" name="password" required>
+          <input type="password" id="password" name="password" placeholder="password" required>
         </div>
         <!-- <div class="form-group">
           <label for="phone">username</label>
