--- a/views/shop_provider_home.ejs
+++ b/views/shop_provider_home.ejs
@@ -287,6 +287,9 @@
     <!-- Your existing HTML code here -->
     <div class="shop-provider-home">
       <h1 class="welcome-heading  h-50">Welcome <%= shopUser.shopName %> </h1>
+      <form action="/logout" method="POST">
+        <button class="btn btn-danger mt-2 " >logout</button>
+    </form>
 
       <div class="container1">
           <div class="left">
