--- a/views/userAccountPage.ejs
+++ b/views/userAccountPage.ejs
@@ -29,8 +29,10 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>userAccountPage</title>
-            <link rel="stylesheet" href="/stylesheets/userAccountPage.css">    
+            <link rel="stylesheet" href="/stylesheets/userAccountPage.css"> 
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">   
         </head>
+
         <body>
             <div class="main">
                <div class="left">
@@ -55,7 +57,9 @@
                     <!-- Edit and Logout buttons -->
                     <div id="buttons">
                         <button class="button" id="editButton">Edit</button>
-                        <button class="button" id="logoutButton">Logout</button>
+                        <form action="/logout" method="POST">
+                            <button class="btn btn-danger mt-2 " >logout</button>
+                        </form>
                     </div>
                     
                 </div>
