--- a/views/loggedInindex.ejs
+++ b/views/loggedInindex.ejs
@@ -43,7 +43,7 @@
        <input type="datetime-local" id="check-in-time" name="checkIn">
    
        <label for="check-out-time"> Check-out Time:</label>
-       <input type="number" name="hours" id="check-out-time">
+       <input type="number" name="hours" placeholder="hours" id="check-out-time">
      
    
          <button id="search-btn" type="submit">Search</button>
