--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,23 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>launch.com</title>
+
   <link rel="stylesheet" href="./stylesheets/style.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
   <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
   
 </head>
+
 <body>
   <div id="main">
-   
     <% include ./footer/nav.ejs %>
-    <% include ./function.ejs %>
+    <% include ./functionLogged.ejs %>
     <% include ./slider.ejs %>
     <% include ./about1.ejs %>
     <% include ./service.ejs %>
-    <% include ./footer/footer.ejs %>
-     
+    <% include ./footer/footer.ejs %> 
   </div>
    
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
