--- a/views/shop_provider_home.ejs
+++ b/views/shop_provider_home.ejs
@@ -185,13 +185,13 @@
         margin-bottom: 0.4vw;
     }
     .welcome-heading{
-      background-color: #66afe9;
+      /* background-color: #66afe9; */
       width: 27%;
       border-radius: 8px;
     }
     a{
       text-decoration: none;
-      background-color: #66afe9;
+      /* background-color: #66afe9; */
     }
 
     #kk{
@@ -285,7 +285,7 @@
 </head>
 <body>
     <!-- Your existing HTML code here -->
-    <% include ./footer/nav.ejs %>
+    <% include ./footer/nav2.ejs %>
 
     <div class="shop-provider-home">
       <h1 class="welcome-heading  h-50">Welcome <%= shopUser.shopName %> </h1>
